--- a/game-of-life.cabal
+++ b/game-of-life.cabal
@@ -4,17 +4,17 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: a9cf91957a6dcd7200ed009be1002b3be3ba7d29b34f618342dc1009a5daed84
+-- hash: b2a6adcaf3104f97659eb74386e7612b3376e8b661f38890c0b3f8c8b82364a6
 
 name:           game-of-life
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/githubuser/game-of-life#readme>
-homepage:       https://github.com/githubuser/game-of-life#readme
-bug-reports:    https://github.com/githubuser/game-of-life/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2020 Author name here
-license:        BSD3
+homepage:       https://github.com/mode89/game-of-life-haskell#readme
+bug-reports:    https://github.com/mode89/game-of-life-haskell/issues
+author:         Andrey Krainyak
+maintainer:     mode.andrew@gmail.com
+copyright:      2020 Andrey Krainyak
+license:        MIT
 license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
@@ -23,7 +23,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/game-of-life
+  location: https://github.com/mode89/game-of-life-haskell
 
 library
   exposed-modules:
