--- a/game-of-life.cabal
+++ b/game-of-life.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: d3f7efb80d544236ec3054e580e4d6c28e11f1b162b3430512e8289aa189e781
+-- hash: 79ace7a8939d8beb092bda62a218b810bf19f0a3ac951cbc9bd8914dc1e7050d
 
 name:           game-of-life
 version:        0.1.0.0
@@ -29,12 +29,16 @@ library
   exposed-modules:
       GameOfLife.Core
       GameOfLife.SlidingWindow
+      GameOfLife.UI.Gtk
+      GameOfLife.UI.Terminal
   other-modules:
       Paths_game_of_life
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , gi-gtk
+    , haskell-gi-base
     , tasty
     , tasty-hunit
   default-language: Haskell2010
@@ -49,6 +53,8 @@ executable game-of-life-exe
   build-depends:
       base >=4.7 && <5
     , game-of-life
+    , gi-gtk
+    , haskell-gi-base
     , tasty
     , tasty-hunit
   default-language: Haskell2010
@@ -66,6 +72,8 @@ test-suite game-of-life-test
   build-depends:
       base >=4.7 && <5
     , game-of-life
+    , gi-gtk
+    , haskell-gi-base
     , tasty
     , tasty-hunit
   default-language: Haskell2010
