--- a/package.yaml
+++ b/package.yaml
@@ -21,10 +21,13 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- cairo
 - haskell-gi-base
+- gi-cairo
 - gi-gtk
 - tasty
 - tasty-hunit
+- transformers
 
 library:
   source-dirs: src
